--- a/booking_details.html
+++ b/booking_details.html
@@ -36,7 +36,7 @@
       <form
         class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0"
       >
-        <div class="input-group">
+        <!-- <div class="input-group">
           <input
             class="form-control"
             type="text"
@@ -47,7 +47,7 @@
           <button class="btn btn-primary" id="btnNavbarSearch" type="button">
             <i class="fas fa-search"></i>
           </button>
-        </div>
+        </div> -->
       </form>
       <!-- Navbar-->
       <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
@@ -68,7 +68,7 @@
             <li><a class="dropdown-item" href="#!">Settings</a></li>
             <li><a class="dropdown-item" href="#!">Activity Log</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Logout</a></li>
+            <li><a class="dropdown-item" href="index.html">Logout</a></li>
           </ul>
         </li>
       </ul>
@@ -102,6 +102,23 @@
                 </div>
                 Event Calendar
               </a>
+
+              <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseReviews" aria-expanded="false" aria-controls="collapseReviews">
+                <div class="sb-nav-link-icon">
+                  <i class="fas fa-star"></i>
+                </div>
+                Review Management
+                <div class="sb-sidenav-collapse-arrow">
+                  <i class="fas fa-angle-down"></i>
+                </div>
+              </a>
+              <div class="collapse" id="collapseReviews" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                <nav class="sb-sidenav-menu-nested nav">
+                  <a class="nav-link" href="addReview.html">Add Review</a>
+                  <a class="nav-link" href="viewReviews.html">View Reviews</a>
+                </nav>
+              </div>
+
               <!-- New Booking Details Link -->
               <a class="nav-link" href="booking_details.html">
                 <div class="sb-nav-link-icon">
@@ -109,27 +126,28 @@
                 </div>
                 Booking Details
               </a>
-               <!-- Manage Bookings Link -->
-               <a class="nav-link" href="manage_bookings.html">
+              <!-- Manage Bookings Link -->
+              <a class="nav-link" href="manage_bookings.html">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-book"></i>
                 </div>
                 Manage Bookings
               </a>
-            <!-- Feedback Forum Link -->
-            <a class="nav-link" href="feedbackForum.html">
+              <!-- Feedback Forum Link -->
+              <a class="nav-link" href="feedbackForum.html">
                 <div class="sb-nav-link-icon">
-                    <i class="fas fa-comment-alt"></i>
+                  <i class="fas fa-comment-alt"></i>
                 </div>
                 Feedback Forum
-                </a>
-                <!-- manage_feedback Link -->
+              </a>
+              <!-- manage_feedback Link -->
               <a class="nav-link" href="manage_feedback.html">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-comment-alt"></i>
                 </div>
                 Manage Feedback
               </a>
+
             </div>
           </div>
         </nav>
