--- a/myevents.html
+++ b/myevents.html
@@ -22,24 +22,16 @@
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-      <a class="navbar-brand ps-3" href="dashboard.html">Event Manager</a>
-      <button
-        class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0"
-        id="sidebarToggle"
-      >
-        <i class="fas fa-bars"></i>
-      </button>
-
       <!-- Navbar Brand-->
-      <!-- <a class="navbar-brand ps-3" href="dashboard.html">Event Manager</a> -->
+      <a class="navbar-brand ps-3" href="dashboard.html">Event Manager</a>
       <!-- Sidebar Toggle-->
-      <!-- <button
+      <button
         class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0"
         id="sidebarToggle"
         href="#!"
       >
         <i class="fas fa-bars"></i>
-      </button> -->
+      </button>
       <!-- Navbar Search-->
       <form
         class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0"
@@ -76,7 +68,7 @@
             <li><a class="dropdown-item" href="#!">Settings</a></li>
             <li><a class="dropdown-item" href="#!">Activity Log</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" id="logoutButton">Logout</a></li>
+            <li><a class="dropdown-item" href="index.html">Logout</a></li>
           </ul>
         </li>
       </ul>
@@ -134,8 +126,8 @@
                 </div>
                 Booking Details
               </a>
-               <!-- Manage Bookings Link -->
-               <a class="nav-link" href="manage_bookings.html">
+              <!-- Manage Bookings Link -->
+              <a class="nav-link" href="manage_bookings.html">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-book"></i>
                 </div>
@@ -147,6 +139,13 @@
                   <i class="fas fa-comment-alt"></i>
                 </div>
                 Feedback Forum
+              </a>
+              <!-- manage_feedback Link -->
+              <a class="nav-link" href="manage_feedback.html">
+                <div class="sb-nav-link-icon">
+                  <i class="fas fa-comment-alt"></i>
+                </div>
+                Manage Feedback
               </a>
 
             </div>
