--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -15,9 +15,7 @@
             <a class="navbar-brand" href="#">Admin Dashboard</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="#">Manage Users</a>
                     </li>
@@ -51,7 +49,7 @@
                                 </tr>
                             </thead>
                             <tbody id="usersTableBody">
-                                <!-- Users data will be dynamically loaded here using JavaScript -->
+                                <!-- User data from backend -->
                             </tbody>
                         </table>
                     </div>
