--- a/dashboard.html
+++ b/dashboard.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Dashboard - SB Admin</title>
+    <title>Dashboard - EventSync</title>
     <link
       href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
       rel="stylesheet"
@@ -22,13 +19,22 @@
 
     <!-- jQuery Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <style>
-       .card {
-          
-          opacity: 1;
-        }
-    </style>
 
+    <style>
+      .card {
+        opacity: 1;
+      }
+
+      /* Style for the top strip */
+      .event-count-strip {
+        background-color: #4e73df;
+        color: white;
+        text-align: center;
+        padding: 20px;
+        font-size: 24px;
+        margin-bottom: 20px;
+      }
+    </style>
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -42,23 +48,7 @@
       >
         <i class="fas fa-bars"></i>
       </button>
-      <!-- Navbar Search-->
-      <form
-        class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0"
-      >
-        <!-- <div class="input-group">
-          <input
-            class="form-control"
-            type="text"
-            placeholder="Search for..."
-            aria-label="Search for..."
-            aria-describedby="btnNavbarSearch"
-          />
-          <button class="btn btn-primary" id="btnNavbarSearch" type="button">
-            <i class="fas fa-search"></i>
-          </button>
-        </div> -->
-      </form>
+
       <!-- Navbar-->
       <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
         <li class="nav-item dropdown">
@@ -78,11 +68,12 @@
             <li><a class="dropdown-item" href="#!">Settings</a></li>
             <li><a class="dropdown-item" href="#!">Activity Log</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="index.html">Logout</a></li>
+            <li><a class="dropdown-item" id="logoutButton">Logout</a></li>
           </ul>
         </li>
       </ul>
     </nav>
+
     <div id="layoutSidenav">
       <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
@@ -157,14 +148,23 @@
                 </div>
                 Manage Feedback
               </a>
-
             </div>
           </div>
         </nav>
       </div>
+
       <div id="layoutSidenav_content">
         <main>
           <div class="container mt-4">
+
+            <!--  the event count -->
+            <div class="event-count-strip">
+              We got <span id="eventCount">0+</span> events for you
+            </div>
+
+            <h2> Latest Events</h2>
+
+            <!-- latest events -->
             <div class="row" id="latestEventsContainer">
               <!-- Event cards will be dynamically inserted here -->
             </div>
@@ -174,20 +174,22 @@
     </div>
 
     <!-- Scripts -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="scripts.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
     <script src="assets/demo/chart-area-demo.js"></script>
     <script src="assets/demo/chart-bar-demo.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+
+    <!-- Script to fetch and update event count -->
+    <script>
+      $(document).ready(function () {
+        // Fetch event count from server
+        $.get('/events/count', function (data) {
+          $('#eventCount').text(data.totalEvents + '+'); // Update event count with '+' symbol
+        });
+      });
+    </script>
+    
   </body>
 </html>
